Linked to animate.css

--- a/demo/index.html
+++ b/demo/index.html
@@ -8,6 +8,7 @@
     <meta charset="utf-8">
     
     <link rel="stylesheet" type="text/css" href="loader.css">
+    <link rel="stylesheet" type="text/css" href="../animate.css/animate.min.css"s>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E=" crossorigin="anonymous"></script>
 
