--- a/demo/index.html
+++ b/demo/index.html
@@ -9,7 +9,7 @@
     
     <link rel="shortcut icon" type="image/png" href="../favicon.png"/>
     
-    <link rel="stylesheet" type="text/css" href="AmethystLoader.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="stylesheet" type="text/css" href="../animate.css/animate.min.css"s>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E=" crossorigin="anonymous"></script>
@@ -24,8 +24,5 @@
     <script src="../SmartLoader.js"></script>
 
 </body>
-
-
-
 
 </html>
