--- a/demo/index.html
+++ b/demo/index.html
@@ -7,7 +7,7 @@
 
     <meta charset="utf-8">
     
-    <link rel="shortcut icon" type="image/png" href="../favicon.png"/>
+    <link rel="shortcut icon" type="image/png" href="favicon.png"/>
     
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="stylesheet" type="text/css" href="../animate.css/animate.min.css"s>
