--- a/demo/index.html
+++ b/demo/index.html
@@ -21,7 +21,7 @@
 <body>
     <h1>CONTENT LOADED</h1>
 
-    <script src="../SmartLoader.js"></script>
+    <script src="../AmethystLoader.js"></script>
 
 </body>
 
