Updated the demo to the last update

--- a/demo/index.html
+++ b/demo/index.html
@@ -3,25 +3,29 @@
 
 <head>
 
-    <title>SmartLoader | Demo</title>
+  <title>SmartLoader | Demo</title>
 
-    <meta charset="utf-8">
-    
-    <link rel="shortcut icon" type="image/png" href="favicon.png"/>
-    
-    <link rel="stylesheet" type="text/css" href="styles.css">
-    <link rel="stylesheet" type="text/css" href="../animate.css/animate.min.css"s>
+  <meta charset="utf-8">
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E=" crossorigin="anonymous"></script>
+  <link rel="shortcut icon" type="image/png" href="favicon.png" />
 
-    <script src="../waitForImages/dist/jquery.waitforimages.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="../AmethystLoader.css">
+  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="stylesheet" type="text/css" href="../animate.css/animate.min.css" s>
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E=" crossorigin="anonymous"></script>
+
+  <script src="../waitForImages/dist/jquery.waitforimages.min.js"></script>
+  <script src="../AmethystLoader.js"></script>
 
 </head>
 
 <body>
-    <h1>CONTENT LOADED</h1>
+  <h1>CONTENT LOADED</h1>
 
-    <script src="../AmethystLoader.js"></script>
+  <script>
+    AmethystLoader("AmethystLoader/loaders/", "gears.svg");
+  </script>
 
 </body>
 
