Improved the demo document

--- a/demo/index.html
+++ b/demo/index.html
@@ -3,15 +3,16 @@
 
 <head>
 
-  <title>SmartLoader | Demo</title>
+  <title>AmethystLoader | Demo</title>
 
   <meta charset="utf-8">
+  <meta http-equiv="cache-control" content="no-cache" />
+  <meta http-equiv="expires" content="0" />
 
   <link rel="shortcut icon" type="image/png" href="favicon.png" />
 
   <link rel="stylesheet" type="text/css" href="../AmethystLoader.css">
   <link rel="stylesheet" type="text/css" href="styles.css">
-  <link rel="stylesheet" type="text/css" href="../animate.css/animate.min.css" s>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E=" crossorigin="anonymous"></script>
 
@@ -24,7 +25,7 @@
   <h1>CONTENT LOADED</h1>
 
   <script>
-    AmethystLoader("AmethystLoader/loaders/", "gears.svg");
+    AmethystLoader("../../AmethystLoader/loaders/", "gears.svg");
   </script>
 
 </body>
