--- a/demo/index.html
+++ b/demo/index.html
@@ -25,7 +25,7 @@
   <h1>CONTENT LOADED</h1>
 
   <script>
-    AmethystLoader("../../AmethystLoader/loaders/", "gears.svg");
+    AmethystLoader("../../AmethystLoader/loaders/", "orbs.svg");
   </script>
 
 </body>
