--- a/demo/index.html
+++ b/demo/index.html
@@ -17,6 +17,7 @@
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E=" crossorigin="anonymous"></script>
 
   <script src="../waitForImages/dist/jquery.waitforimages.min.js"></script>
+  <script src="../fontfaceobserver/fontfaceobserver.js"></script>
   <script src="../AmethystLoader.js"></script>
 
 </head>
